May 10, 2010 edgbla <edgbla@yandex.ru>

 * libpcsxcore/sio.h: Some code (regs,macro) was moved to the 'c' file. 
 * libpcsxcore/sio.c: Likewise.

May 10, 2010 Wei Mingzhi <whistler_wmz@users.sf.net>

 * configure.ac: libbz2 is no longer needed.
 * debian/control: Likewise.
 * libpcsxcore/plugins.c: CDRgetBufferSub() is now mandatory.
 * libpcsxcore/cdrom.h: Savestate compatibility is already broken, so no need
   to stuff garbage into saved files :)
 * libpcsxcore/mdec.c: Likewise.
 * libpcsxcore/psxhw.c: Likewise.
 * libpcsxcore/sio.c: Likewise.
 * libpcsxcore/psxcounters.c: Likewise.

May 9, 2010 edgbla <edgbla@yandex.ru>

 * libpcsxcore/psxcounters.c: psxRcntFreeze was fixed.
 * plugins/dfxvideo/prim.c: Returned some code (iGPUHeight=1024), IMO, it's
   wrong, can't perform the tests.

May 9, 2010 Wei Mingzhi <whistler_wmz@users.sf.net>

 * libpcsxcore/plugins.c: Removed support for ancient GPU/SPU plugin APIs.
 * libpcsxcore/plugins.h: Likewise.

May 8, 2010 edgbla <edgbla@yandex.ru>

 * plugins/dfxvideo/prim.c: Dithering logic was fixed.
 * plugins/dfxvideo/gpucfg-0.1df/main.c: Likewise.

May 8, 2010 Wei Mingzhi <whistler_wmz@users.sf.net>

 * libpcsxcore/misc.c: Use const for input strings.
 * libpcsxcore/misc.h: Likewise.
 * libpcsxcore/spu.c: Got rid of 0x80000000 flag of psxRegs.interrupt.
 * libpcsxcore/psxinterpreter.c: Likewise.
 * libpcsxcore/cdrom.c: Likewise.
 * libpcsxcore/ix86_64/iR3000A-64.c: Likewise.
 * libpcsxcore/r3000a.c: Likewise.
 * libpcsxcore/psxhw.c: Likewise.
 * libpcsxcore/r3000a.h: Likewise.
 * libpcsxcore/ix86/iR3000A.c: Likewise.
 * libpcsxcore/psxhw.h: Likewise.
 * libpcsxcore/sio.c: Likewise.
 * libpcsxcore/psxcounters.c: Likewise.

May 8, 2010 Wei Mingzhi <whistler_wmz@users.sf.net>

 * libpcsxcore/sio.h: Added extern "C" to all headers.
 * libpcsxcore/misc.h: Likewise.
 * libpcsxcore/ppc/reguse.h: Likewise.
 * libpcsxcore/ppc/pGte.h: Likewise.
 * libpcsxcore/ppc/ppc.h: Likewise.
 * libpcsxcore/psxdma.h: Likewise.