@@ -1,3 +1,11 @@
+May 10, 2010 Wei Mingzhi <whistler_wmz@users.sf.net>
+
+ * libpcsxcore/cdrom.c: Got rid of gzfreezel.
+ * libpcsxcore/mdec.c: Likewise.
+ * libpcsxcore/psxcommon.h: Likewise.
+ * libpcsxcore/sio.c: Likewise.
+ * libpcsxcore/psxcounters.c: Likewise.
+
 May 10, 2010 edgbla <edgbla@yandex.ru>
 
  * libpcsxcore/sio.h: Some code (regs,macro) was moved to the 'c' file. 
